youfull/objects/Lead_Metrics_Config__c.object
<CustomObject>
    <description>Setup object that allows configuration of lead related metrics, e.g. conversion metrics formulae</description>
    <fields>
        <fullName>Formula__c</fullName>
        <label>Formula</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Lead Metrics Config</relationshipLabel>
        <relationshipName>Lead_Metrics_Config</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Rep Conversion Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Conversion Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overall Conversion Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avg Time to Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avg Time to Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep Avg Time to Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep Avg Time to Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Avg Time to Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Avg Time to Conversion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Lead Metrics Config</label>
    <nameField>
        <displayFormat>LMC-{0}</displayFormat>
        <label>Lead Metrics Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Metrics Config</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>